# pwndbg-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: server.py
src/parsers/: heap.py  kernel.py  memory.py  misc.py
src/pwndbg_mcp/: __init__.py  server.py  session.py
src/pwndbg_mcp/parsers/: __init__.py  base.py  context.py  disasm.py
src/tools/: __init__.py  binary_tools.py  breakpoint_tools.py  context_tools.py  execution_tools.py  heap_tools.py  kernel_tools.py  memory_tools.py  session_tools.py  utility_tools.py
tests/: conftest.py  test_integration_heap.py  test_integration_simple.py
tests/fixtures/binaries/: Makefile  README.md  heap_test.c  simple.c
tests/fixtures/sample_outputs/: README.md
tests/test_parsers/: test_context_parsers.py  test_heap_parsers.py  test_memory_parsers.py  test_misc_parsers.py
