[project]
name = "pwndbg-mcp"
version = "0.1.0"
description = "MCP server for pwndbg - enabling LLMs to use GDB with pwndbg for exploit development and reverse engineering"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ben Gabay"}
]
keywords = ["mcp", "pwndbg", "gdb", "debugging", "reverse-engineering", "exploit-development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Security",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pexpect>=4.9.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/bengabay1994/pwndbg-mcp"
Repository = "https://github.com/bengabay1994/pwndbg-mcp"
Issues = "https://github.com/bengabay1994/pwndbg-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
pwndbg-mcp = "pwndbg_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pwndbg_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: Integration tests requiring pwndbg (deselect with '-m \"not integration\"')",
    "heap: Heap-specific integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
